<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_table"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/time_table" />
        <item
            android:id="@+id/nav_pill"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/pill" />

        <item
            android:id="@+id/nav_add_user"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Add Users" />

        <item
            android:id="@+id/nav_reg_std"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Student Registration" />

        <item
            android:id="@+id/nav_lang"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/language" />

    </group>

    <item android:title="@string/More_details">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Contact_us" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/About_us" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
        </menu>
    </item>

</menu>
